2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: As the requestURI isn't an absolute
	URI anymore, it might not have a scheme, in which case, check that
	of the baseURI, fixes viewer being called with a playlist, instead
	of a media URI when the src is relative (Closes: #555417)

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (relative_uri_remove_query),
	(resolve_uri): g_file_resolve_relative_path() doesn't handle queries
	(or fragments, but we don't care about them), so work around that
	fact. Fixes resolution of filenames when they have a '?' in their
	name (Helps: #555417)

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* src/eggdesktopfile.c:
	* src/eggdesktopfile.h:
	* src/eggsmclient-1.patch:
	* src/eggsmclient-2.patch:
	* src/eggsmclient-3.patch:
	* src/eggsmclient-osx.c:
	* src/eggsmclient-private.h:
	* src/eggsmclient-win32.c:
	* src/eggsmclient-xsmp.c:
	* src/eggsmclient.c:
	* src/eggsmclient.h: Add missing files (Closes: #555500)

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_mrls): Require rsndvdbin
	for DVD playback, as that does handle menus
	(Closes: #515982)

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/Makefile.am:
	* browser-plugin/Makefile.am:
	* configure.in:
	* lib/Makefile.am:
	* src/Makefile.am:
	* src/backend/Makefile.am:
	* src/plugins/Makefile.am:
	* src/plugins/bemused/Makefile.am:
	* src/plugins/galago/Makefile.am:
	* src/plugins/gromit/Makefile.am:
	* src/plugins/lirc/Makefile.am:
	* src/plugins/media-player-keys/Makefile.am:
	* src/plugins/mythtv/Makefile.am:
	* src/plugins/ontop/Makefile.am:
	* src/plugins/properties/Makefile.am:
	* src/plugins/publish/Makefile.am:
	* src/plugins/sample-vala/Makefile.am:
	* src/plugins/screensaver/Makefile.am:
	* src/plugins/sidebar-test/Makefile.am:
	* src/plugins/skipto/Makefile.am: