@@ -1,29 +1,0 @@
-/* Totem Mozilla plugin
- *
- * Copyright © 2004-2007, Bastien Nocera <hadess@hadess.net>
- * Copyright © 2002, David A. Schleef <ds@schleef.org>
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Library General Public
- * License as published by the Free Software Foundation; either
- * version 2 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Library General Public License for more details.
- *
- * You should have received a copy of the GNU Library General Public
- * License along with this library; if not, write to the
- * Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
- * Boston, MA 02110-1301  USA.
- */
-
-#include "nsISupports.idl"
-
-[scriptable, uuid(8e4f5790-23bc-4597-a083-2ec1cc2d72ab)]
-interface totemIBasicPlayer : nsISupports {
-  void Play ();
-  void Rewind ();
-  void Stop ();
-};
