@@ -696,12 +696,6 @@ AM_CONDITIONAL([ENABLE_BROWSER_PLUGINS], [test "$enable_browser_plugins" = "yes"
 
 if test "$enable_browser_plugins" = "yes"; then
 
-AC_MSG_CHECKING([whether to enable the basic browser plugin])
-AC_ARG_ENABLE([basic-plugin],
-	AS_HELP_STRING([--disable-basic-plugin],[Whether to disable the basic browser plugin]),
-	[],[enable_basic_plugin=yes])
-AC_MSG_RESULT([$enable_basic_plugin])
-
 AC_MSG_CHECKING([whether to enable the GMP browser plugin])
 AC_ARG_ENABLE([gmp-plugin],
 	AS_HELP_STRING([--enable-gmp-plugin],[Whether to enable the GMP browser plugin]),
@@ -734,7 +728,6 @@ AC_MSG_RESULT([$enable_cone_plugin])
 
 fi
 
-AM_CONDITIONAL([ENABLE_BASIC_PLUGIN],[test "$enable_basic_plugin" = "yes"])
 AM_CONDITIONAL([ENABLE_GMP_PLUGIN],[test "$enable_gmp_plugin" = "yes"])
 AM_CONDITIONAL([ENABLE_COMPLEX_PLUGIN],[test "$enable_complex_plugin" = "yes"])
 AM_CONDITIONAL([ENABLE_NARROWSPACE_PLUGIN],[test "$enable_narrowspace_plugin" = "yes"])
